--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
                     </li>
                 </ul>
         </div>
-        <div class="adding"><i class="fas fa-plus-circle" id="add"></i><br><br>
+
+        <div class="adding">
+
+<span id="addbtn"><i class="fas fa-plus-circle" id="add"></i></span><br><br>
           <input id="input" placeholder="Add your To Do" id="todo" type="text">
             
         </div>
