--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         </div>
 
         <div class="adding">
-
+            <div class="adding"><i class="fas fa-plus-circle" id="add"></i><br><br>
           <input id="input" placeholder="Add your To Do" id="todo" type="text">
-            
+
         </div>
     </div>
     <script src="app.js"></script>
